# tauri-appcenter-companion

./: .eslintrc.json  .prettierrc.json  README.md  package.json  tsconfig.json
.github/workflows/: publish.yml  test.yml
src/: index.css  main.tsx
src-tauri/: Cargo.toml  bounce_scroll.patch  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  window_ext.rs
src/app/: App.tsx
src/app/components/: BuildButton.tsx  BuildStatusIndicator.tsx  index.ts
src/app/navigation/: AppNavigator.tsx  Navigation.tsx
src/app/screens/api-token/: APITokenListModal.tsx  AddAPITokenDialog.tsx
src/app/screens/application-list/: AddBundledAppDialog.tsx  ApplicationList.tsx  ApplicationListScreen.tsx  ApplicationMenuButton.tsx  BundledAppMenuButton.tsx  SelectApplicationList.tsx
src/models/: environment.ts  index.ts
src/models/application-store/: application-store.ts  index.ts
src/models/branch-store/: branch-store.ts  index.ts
src/models/build-store/: build-store.ts  index.ts
src/models/bundled-application-store/: bundled-application-store.ts  index.ts  set-up-bundled-application-ws.ts
src/models/extensions/: with-environment.ts
src/models/owner-store/: index.ts  owner-store.ts
src/models/root-store/: root-store-persist.ts  root-store.ts  setup-root-store.ts
src/models/token-store/: index.ts  token-store.ts
src/services/: index.ts
src/services/appcenter-api/: appcenter-api.ts  appcenter-api.type.ts  index.ts
src/services/http-client/: http-client.ts
src/services/storage/: storage.ts
src/websockets/: app-websocket-channel.ts
(+8 files in other folders)
