[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
serde_json = "1.0"
window-vibrancy = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.10", features = ["http-all", "macos-private-api", "updater", "window-start-dragging"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
rev = "4a5a8fb54e62bc0d0e07007b83101c3fe5cf24ba"

[dependencies.tauri-plugin-websocket]
git = "https://github.com/tauri-apps/tauri-plugin-websocket"
rev = "53c9a3ffc37cd178928d4f6c3443f4c1beb63962"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
